--- a/ports/harfbuzz/CONTROL
+++ b/ports/harfbuzz/CONTROL
@@ -1,5 +1,5 @@
 Source: harfbuzz
-Version: 1.8.4-2
+Version: 2.0.2
 Description: HarfBuzz OpenType text shaping engine
 Build-Depends: freetype, ragel
 Default-Features: ucdn
